# Aura-Protocol

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  hardhat.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  Escrow.sol  NEW_ESCROW_ADDRESS.txt  agent.js  arena.js  automation.js  check_allowance.js  check_ausd.js  check_db.js  check_escrow_storage.js  check_escrow_storage2.js  check_leverage.js  check_router.js  check_router2.js  check_router3.js  check_static.js  check_storeorder.js  check_transferfrom.js  check_tx.js  clean_all_positions.js  conditionalKeeper.js  copyEngine.js  db.js  deploy_solidity.js  executor.js  fix_router.js  healthFactor.js  index.js  init_escrow.js  keeper.js  liquidator.js  lobKeeper.js  macroAnalyzer.js  market.js  marketMaker.js  mcp-bridge.mjs  mcp-register.mjs  mcp-users.mjs  mcpServer.mjs  modify_env.js  (+21 more)
contracts/: AdvancedGuardrail.sol  AuraAccount.sol  AuraAuditTrail.sol  AuraCopyTradingV2.sol  AuraDAO.sol  AuraFactory.sol  AuraGuardrailManager.sol  AuraIntelligenceVault.sol  AuraMMFund.sol  AuraOrderBook.sol  AuraPaymaster.sol  AuraPerps.sol  AuraPerpsRouter.sol  AuraSocialTrading.sol  AuraVault.sol  ConditionalOrderManager.sol  EntryPoint.sol  GMXMock.sol  IAuraGuardrail.sol  IVaultGuardrail.sol  LiquidationShield.sol  MockDapp.sol  MockOracle.sol  SolidityGuardrail.sol  aUSD.sol
frontend/: package-lock.json  package.json  tailwind.config.mjs
scripts/: activate-guardrail.js  (+26 more)
stylus-escrow/: Cargo.toml
stylus-escrow/.cargo/: config.toml
stylus-escrow/src/: lib.rs  main.rs
(+96 files in other folders)
